Safari mobile team section actually fixed this time (#66)
* color theme changed to red

* main bg image blurry now

* animation speed changed for main

* safari mobile support for team profile hover member-detail

* border-radius of element fixed. safari mobile team section fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1033,6 +1033,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #team .member:hover .member-info {
+  border-radius: 100%;
   background: rgba(145, 0, 7, .76);
   opacity: 1;
   transition: 0.4s;
